--- a/src/config/i18n/translations/en.json
+++ b/src/config/i18n/translations/en.json
@@ -1,6 +1,16 @@
 {
   "login": {
+    "login": "Login",
+    "log-in-to": "Log in to",
+    "frs-account": "FRS Account",
+    "forgot-password?": "Forgot your Password?",
     "username": "Username",
     "password": "Password"
+  },
+  "routes": {
+    "choose-route": "Choose Route"
+  },
+  "footer": {
+    "main-menu": "Main Menu"
   }
 }
