Basic Main Menu page

--- a/src/config/i18n/translations/en.json
+++ b/src/config/i18n/translations/en.json
@@ -10,6 +10,11 @@
   "routes": {
     "choose-route": "Choose Route"
   },
+  "main-menu": {
+    "sales": "Sales",
+    "boarding": "Boarding",
+    "cancel": "Cancel"
+  },
   "footer": {
     "main-menu": "Main Menu"
   }
