Improve main menu styling

--- a/src/config/i18n/translations/en.json
+++ b/src/config/i18n/translations/en.json
@@ -16,6 +16,7 @@
     "cancel": "Cancel"
   },
   "footer": {
-    "main-menu": "Main Menu"
+    "main-menu": "Main Menu",
+    "logout": "Logout"
   }
 }
