Display departure times on screen

--- a/src/config/i18n/translations/en.json
+++ b/src/config/i18n/translations/en.json
@@ -15,6 +15,9 @@
     "boarding": "Boarding",
     "cancel": "Cancel"
   },
+  "departure-times": {
+    "choose-departure": "Choose Departure"
+  },
   "footer": {
     "main-menu": "Main Menu",
     "logout": "Logout"
