--- a/src/config/i18n/translations/en.json
+++ b/src/config/i18n/translations/en.json
@@ -18,8 +18,18 @@
   "departure-times": {
     "choose-departure": "Choose Departure"
   },
+  "booking": {
+    "voyageleg": "Voyageleg",
+    "adult-standard": "Adult - Standard",
+    "child-standard": "Child - Standard",
+    "bycicle-standard": "Bycicle - Standard",
+    "car-up-to": "Car up to {{num}}",
+    "book": "BOOK"
+  },
   "footer": {
     "main-menu": "Main Menu",
-    "logout": "Logout"
+    "logout": "Logout",
+    "summary": "Summary",
+    "reset": "Reset"
   }
 }
