feat(Printer): Printable receipt with correct format

--- a/src/config/i18n/translations/en.json
+++ b/src/config/i18n/translations/en.json
@@ -12,5 +12,31 @@
   },
   "footer": {
     "main-menu": "Main Menu"
+  },
+  "printable-receipt": {
+    "user": "User: {{username}}",
+    "ticket-validation-message": "The ticket is validated with the purchase and is only valid for the subsequent journey. The terms and conditions 6 and 18 of the shipping company apply",
+    "total": {
+      "gross": "Total (gross): {{value}}",
+      "net": "Total (net): {{value}}"
+    },
+    "thank-message": "Thank you!",
+    "vat-percentage": "{{value}}%",
+    "tse-info-divider": "-----------------TSE Information----------------",
+    "ticket": {
+      "quantity-and-price": "{{quantity}} x at {{price}}",
+      "include-vat": "incl. {{value}}% VAT"
+    },
+    "tse": {
+      "deviceNumber": "Device Serial Number: {{value}}",
+      "number": "TSE Serial Number: {{value}}",
+      "signature": "Signature: {{value}}",
+      "transaction": "Transaction: {{value}}",
+      "startDateTime": "Start: {{value}}",
+      "endDateTime": "Finish: {{value}}",
+      "counterSignature": "Signature-Payer: {{value}}",
+      "algorithm": "Signature-Algorithms: {{value}}",
+      "timeFormat": "Time-Format: {{value}}"
+    }
   }
 }
