Add booking summary

--- a/src/config/i18n/translations/en.json
+++ b/src/config/i18n/translations/en.json
@@ -24,6 +24,9 @@
   "booking": {
     "book": "BOOK"
   },
+  "booking-summary": {
+    "booking-summary": "Booking summary"
+  },
   "payment": {
     "payment-method": "Payment Method",
     "cash": "Cash",
