Implement back button

--- a/src/config/i18n/translations/en.json
+++ b/src/config/i18n/translations/en.json
@@ -1,6 +1,7 @@
 {
   "common": {
-    "voyageleg": "Voyageleg"
+    "voyageleg": "Voyageleg",
+    "back": "Back"
   },
   "login": {
     "login": "Login",
