--- a/src/config/i18n/translations/en.json
+++ b/src/config/i18n/translations/en.json
@@ -33,6 +33,7 @@
     "cash": "Cash",
     "payment-summary": "Payment Summary",
     "passengers": "Passengers",
+    "vehicles": "Vehicles",
     "total": "Total",
     "confirm-purchase": "Confirm Purchase"
   },
