--- a/src/config/i18n/translations/en.json
+++ b/src/config/i18n/translations/en.json
@@ -10,6 +10,11 @@
     "username": "Username",
     "password": "Password"
   },
+  "password-reset": {
+    "reset-password": "Reset your password",
+    "email": "Email",
+    "send-email": "Send Email"
+  },
   "routes": {
     "choose-route": "Choose Route"
   },
