Update styling and translations

--- a/src/config/i18n/translations/en.json
+++ b/src/config/i18n/translations/en.json
@@ -9,7 +9,9 @@
     "frs-account": "FRS Account",
     "forgot-password?": "Forgot your Password?",
     "username": "Username",
-    "password": "Password"
+    "password": "Password",
+    "click": "Click",
+    "here": "here"
   },
   "password-reset": {
     "reset-password": "Reset your password",
