chore(RouteSelection/rework): Added svgs, create custom component to render custom scrollbar

--- a/src/config/i18n/translations/en.json
+++ b/src/config/i18n/translations/en.json
@@ -17,7 +17,7 @@
     "send-email": "Send Email"
   },
   "routes": {
-    "choose-route": "Choose Route"
+    "choose-route": "Select your route"
   },
   "main-menu": {
     "sales": "Sales",
