Add translations to tycket types page

--- a/src/config/i18n/translations/en.json
+++ b/src/config/i18n/translations/en.json
@@ -26,6 +26,14 @@
     "boarding": "Boarding",
     "cancel": "Cancel"
   },
+  "ticket-types": {
+    "what-do-you-want-to-book": "What do you want to book?",
+    "passengers": "Passengers",
+    "vehicles": "Vehicles",
+    "multitickets": "Multitickets",
+    "others": "Others",
+    "book": "Book"
+  },
   "departure-times": {
     "choose-departure": "Choose Departure"
   },
