feat: Payment selection screen rework

--- a/src/config/i18n/translations/en.json
+++ b/src/config/i18n/translations/en.json
@@ -40,7 +40,7 @@
     "booking-summary": "Booking summary"
   },
   "payment": {
-    "payment-method": "Payment Method",
+    "screen-title": "Checkout",
     "cash": "Cash",
     "payment-summary": "Payment Summary",
     "passengers": "Passengers",
