Update translations and screen layout

--- a/src/config/i18n/translations/en.json
+++ b/src/config/i18n/translations/en.json
@@ -26,7 +26,7 @@
     "booking": "Booking",
     "boarding": "Boarding",
     "cancel": "Cancel Booking",
-    "route-number": "Route {{routeNumber}}"
+    "route": "Route {{route}}"
   },
   "ticket-types": {
     "what-do-you-want-to-book": "What do you want to book?",
